<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Checkout</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="price">Price</string>
    <string name="confirm">Confirm</string>
    <string name="dis5">-5%</string>
    <string name="dis10">-10%</string>
    <string name="payment">Payment Type</string>
    <string name="totalTax">With 15% Tax</string>
    <string name="cash">Cash</string>
    <string name="hint">0.00</string>
    <string name="admin">Admin</string>
    <string name="cashb">Cash Back</string>
    <string name="search">Enter Search Here</string>
    <string name="clear">Clear All</string>
    <string name="update">Update Product</string>
    <string name="delete">Delete Product</string>
    <string name="pname">Product Name</string>
    <string name="pprice">Product Price</string>
    <string name="returnTC">Return to Checkout</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_admin">AdminAct</string>
    <string name="log_title">Logs:</string>
    <string name="print">Print Logs</string>
    <string name="returnAP">Return to Admin Page</string>
    <string name="showLogs">Show Logs</string>
	<string name="deleteLogs">Delete all Logs</string>
	<string name="scan">Scan Item</string>
	<string name="addscan">Add Scanned Item</string>
    
</resources>
