<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.checkout.AdminAct" >

    <LinearLayout
        android:id="@+id/linearLayout1a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="99" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/searchTexta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="12.38"
                android:ems="10"
                android:hint="@string/search"
                android:maxLines="1"
                android:minLines="1"
                android:textSize="30sp" />

            <GridView
                android:id="@+id/itemGrida"
                android:layout_width="601dp"
                android:layout_height="576dp"
                android:layout_weight="28.89"
                android:horizontalSpacing="10dp"
                android:numColumns="auto_fit"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp" >
            </GridView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="309dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/pNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="80dp"
                android:text="@string/pname" />

            <EditText
                android:id="@+id/pNDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:id="@+id/pPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:text="@string/pprice" />

            <EditText
                android:id="@+id/pPDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="updatePN"
                android:text="@string/update"
                android:textSize="30sp" />

            <Button
                android:id="@+id/deletePButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="deleteP"
                android:text="@string/delete"
                android:textSize="30sp" />

            <Button
                android:id="@+id/clearButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="clear"
                android:text="@string/clear"
                android:textSize="30sp" />

            <Button
                android:id="@+id/scanButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="scan"
                android:text="@string/addscan"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/iv_group"
                android:layout_width="178dp"
                android:layout_height="175dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="95dp"
                android:onClick="changeGroup"
                android:src="@drawable/nopic"
                android:visibility="invisible" />

            <Button
                android:id="@+id/showLogButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="230dp"
                android:onClick="showLogs"
                android:text="@string/showLogs"
                android:textSize="30sp" />

            <Button
                android:id="@+id/scanItemButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="returnToCheckout"
                android:text="@string/returnTC"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>