<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_weight="30"
            android:text="@string/log_title"
            android:textSize="30sp" />

        <ListView
            android:id="@+id/lv_logs"
            android:layout_width="600dp"
            android:layout_height="590dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp" >

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_weight="150"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bt_print"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="250dp"
            android:onClick="saveLogs"
            android:text="@string/print"
            android:textSize="35sp" />

        <Button
            android:id="@+id/bt_deleteLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="deleteLogs"
            android:text="@string/deleteLogs"
            android:textSize="35sp" />

        <Button
            android:id="@+id/bt_retAP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:onClick="returnToAdminPage"
            android:text="@string/returnAP"
            android:textSize="35sp" />

    </LinearLayout>

</LinearLayout>
